sandbox/output
HikerTest.java:23: error: cannot find symbol
        int actual = Hikcer.answer("1,3");
                     ^
  symbol:   variable Hikcer
  location: class HikerTest
1 error
